--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
   <body>
 
+    <form action="search.html">
+      <input type="text" name="artist">
+      <input type="text" name="song">
+      <button type="submit">submit</button>
+    </form>
+  
+    
+
    <script src="./assets/script/homepage.js"></script> 
 
   </body>
