--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="navbar-item">
         <img src="./assets/images/logo.png" alt="our-logo" style="max-height: 85px;">
       </a>
-          <!-- Mobile "Hamburger Icon" -->
+      <!-- Mobile "Hamburger Icon" -->
       <a class="navbar-burger" id="burger">
         <span></span>
         <span></span>
@@ -33,14 +33,14 @@
       </div>
     </div>
   </nav>
-<!-- Search Section Input-->
+  <!-- Search Section Input-->
   <section class="user">
     <h1 class="title is-size-1 has-text-centered" id="urbCi">Urban Cipher</h1>
     <p class="subtitle has-text-centered ">Deconstruct the meaning of your favorite song.</p>
-    <form action="search.html">
-      <input class="input" type="text" name="artist" placeholder="Enter your favorite artist"><br>
+    <form id="search-form" action="search.html">
+      <input id="artist-input" class="input" type="text" name="artist" placeholder="Enter your favorite artist"><br>
       <p class="is-size-2 has-text-weight-bold">+</p>
-      <input class="input" type="text" name="song" placeholder="Enter the name of the song"><br>
+      <input id="song-input" class="input" type="text" name="song" placeholder="Enter the name of the song"><br>
       <button class="button glow-button" type="submit">SEARCH</button>
     </form>
   </section>
