--- a/search.html
+++ b/search.html
@@ -39,16 +39,8 @@
       <div class="columns is-multiline">
         <div class="column is-12-tablet is-8-desktop">
           <h1 class="title is-size-1" id="lyricsInput">Lyrics</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Odio laboriosam fugit error excepturi non recusandae accusamus molestias adipisci architecto
-            facilis mollitia amet eaque aliquam consequuntur omnis vel rerum, quidem, voluptates ipsa,
-            porro quae? Reiciendis beatae corrupti asperiores cupiditate laudantium voluptate dolorem quo fuga.
-            Earum, obcaecati repellendus quos perspiciatis et magnam in rerum id dicta suscipit inventore maiores non
-            quia eius,
-            dolores explicabo culpa debitis commodi asperiores repellat praesentium. Nisi quos quaerat omnis obcaecati!
-            Repellat dolorum quia et pariatur quaerat? Porro quae minus tempora numquam ad odit molestiae assumenda
-            natus!
-            Repellendus iure, iste omnis magnam animi laboriosam laborum repudiandae dolor odit.</p>
+          <p id="render-lyrics"></p>
+          
         </div>
         <!-- Definition Output -->
         <div class="column is-6-tablet is-4-desktop" id="urbanWeb">
@@ -79,7 +71,7 @@
       </div>
     </div>
   </section>
-<!-- Script -->
+  <!-- Script -->
   <script src="./assets/script/search.js"></script>
 </body>
 
