--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="./assets/images/logo.png" alt="our-logo" style="max-height: 85px;">
+        <img src="./assets/images/urban-cipher-logo.png" alt="our-logo" style="max-height: 85px;">
       </a>
       <!-- Mobile "Hamburger Icon" -->
       <a class="navbar-burger" id="burger">
