--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
     <!-- Logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="./assets/images/logo.png" alt="our-logo" style="max-height: 85px;">
+        <img src="./assets/images/urban-cipher-logo.png" alt="our-logo" style="max-height: 85px;">
       </a>
       <!-- Mobile "Hamburger Icon" -->
       <a class="navbar-burger" id="burger">
@@ -39,7 +39,9 @@
       <div class="columns is-multiline">
         <div class="column is-12-tablet is-8-desktop">
           <h1 class="title is-size-1" id="lyricsInput">Lyrics</h1>
-          <p id="render-lyrics"></p>
+          <div>
+            <pre id="render-lyrics"></pre>
+          </div>
 
         </div>
         <!-- Definition Output -->
