--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
     <!-- Logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="./assets/images/logo.png" alt="our-logo" style="max-height: 85px;">
+        <img src="./assets/images/urban-cipher-logo.png" alt="our-logo" style="max-height: 85px;">
       </a>
       <!-- Mobile "Hamburger Icon" -->
       <a class="navbar-burger" id="burger">
@@ -39,8 +39,10 @@
       <div class="columns is-multiline">
         <div class="column is-12-tablet is-8-desktop">
           <h1 class="title is-size-1" id="lyricsInput">Lyrics</h1>
-          <p id="render-lyrics"></p>
-          
+          <p>
+            <pre id="render-lyrics"></pre>
+          </p>
+
         </div>
         <!-- Definition Output -->
         <div class="column is-6-tablet is-4-desktop" id="urbanWeb">
@@ -49,9 +51,7 @@
               <input type="text" class="input" placeholder="Urban Dictionary Search">
               <button class="button glow-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim neque, velit illo cupiditate facere iure
-                omnis quaerat animi dolores totam expedita aperiam,vel, iste eveniet obcaecati illum temporibus
-                provident facilis!</p>
+              <p id="render-urban"></p>
             </div>
           </div>
         </div>
@@ -61,10 +61,7 @@
               <input type="text" class="input" placeholder="Miriam Webster Dictionary Search">
               <button class="button glow-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim neque, velit illo cupiditate facere iure
-                omnis quaerat animi dolores totam expedita aperiam,vel, iste eveniet obcaecati illum temporibus
-                provident
-                facilis!</p>
+              <p id="render-webster"></p>
             </div>
           </div>
         </div>
