Update to styling
1. Updated CSS heavily
2. Updated Index and Search HTML to align with CSS


Please review carefully.

--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Urban-Cipher</title>
+  <title>Urban Cipher Lyrics</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
@@ -15,7 +15,12 @@
     <!-- Logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="./assets/images/urban-cipher-logo.png" alt="our-logo" style="max-height: 85px;">
+        <img
+          class="header-logo"
+          src="./assets/images/urban-cipher-logo.png"
+          alt="our-logo"
+          style="max-height: 65px"
+        />
       </a>
       <!-- Mobile "Hamburger Icon" -->
       <a class="navbar-burger" id="burger">
@@ -27,8 +32,8 @@
     <!-- Navbar Menu -->
     <div class="navbar-menu" id="navLinks">
       <div class="navbar-end">
-        <a class="navbar-item">About</a>
-        <a class="navbar-item">Testimonials</a>
+        <!-- <a class="navbar-item">About</a>
+        <a class="navbar-item">Testimonials</a> -->
       </div>
     </div>
   </nav>
@@ -44,26 +49,25 @@
           </p>
 
         </div>
-        <!-- Definition Output -->
+        <!-- Urban DIctionary Definition Output -->
         <div class="column is-6-tablet is-4-desktop" id="urbanWeb">
           <div class="field">
             <div class="control">
-              <form id="urban-form">
-                <input type="text" class="input" id="urban-input" placeholder="Urban Dictionary Search">
-                <button class="button glow-button" type="submit">SEARCH</button>
-              </form>
+              <input type="text" class="input" placeholder="Urban Dictionary Search">
+              <button class="button glow-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
               <p id="render-urban"></p>
             </div>
           </div>
         </div>
+        
+      
+        <!-- Websters Dictionary Search-->
         <div class="column is-6-tablet is-4-desktop navbar-end" id="miriamWeb">
           <div class="field">
             <div class="control">
-              <form id="webster-form">
-                <input type="text" class="input" id="webster-input" placeholder="Miriam Webster Dictionary Search">
-                <button class="button glow-button" type="submit">SEARCH</button>
-              </form>
+              <input type="text" class="input" placeholder="Miriam Webster Dictionary Search">
+              <button class="button glow-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
               <p id="render-webster"></p>
             </div>
