Added urban-dictionary function

--- a/search.html
+++ b/search.html
@@ -54,9 +54,9 @@
           <div class="field">
             <div class="control">
               <input type="text" class="input" placeholder="Urban Dictionary Search">
-              <button class="button glow-button" type="submit">SEARCH</button>
+              <button class="button glow-button" id="urban-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
-              <p id="render-urban"></p>
+              <div id="render-urban"></div>
             </div>
           </div>
         </div>
