corrected typing-demo width

--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
         <div class="column is-6-tablet is-4-desktop navbar-end" id="miriamWeb">
           <div class="field">
             <div class="control">
-              <input type="text" class="input" placeholder="Miriam Webster Dictionary Search">
+              <input type="text" class="input" placeholder="Merriam Webster Dictionary Search">
               <button class="button glow-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
               <p id="render-webster"></p>
