--- a/search.html
+++ b/search.html
@@ -8,6 +8,9 @@
   <title>Urban Cipher Lyrics</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="16x16"  href="./assets/images/favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
