--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
       <!-- <p class="subtitle has-text-centered">
         Deconstruct the meaning of your favorite song.
       </p> -->
-      <form id="search-form" action="search.html">
-        <input
+      <form autocomplete= "off" id="search-form" action="search.html">
+        <div class="autocomplete">
+          <input
           id="artist-input"
           class="input"
           type="text"
@@ -70,6 +71,7 @@
           name="song"
           placeholder="Enter the name of the song"
         /><br />
+        </div>
         <button class="button glow-button" type="submit">SEARCH</button>
       </form>
     </section>
