Styled search boxes and created cards

--- a/search.html
+++ b/search.html
@@ -51,29 +51,34 @@
         <div class="column is-6-tablet is-4-desktop" id="urbanWeb">
           <div class="field">
             <div class="control">
+              <div class="card">
               <input type="text" class="input" id="urban-input" placeholder="Urban Dictionary Search">
               <button class="button glow-button" id="urban-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
               <div id="render-urban"></div>
+              </div>
             </div>
-          </div>
+          
         </div>
 
 
         <!-- Websters Dictionary Search-->
-        <div class="column is-6-tablet is-4-desktop navbar-end" id="miriamWeb">
-          <div class="field">
+        <!-- <div class="column is-6-tablet is-4-desktop navbar-end" id="miriamWeb"> -->
+          <div class="field2">
             <div class="control">
+              <div class="card">
               <input type="text" class="input" id="webster-input" placeholder="Merriam Webster Dictionary Search">
               <button class="button glow-button" id="webster-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition</h3>
               <p id="render-webster"></p>
             </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+    </section>
   <!-- Script -->
   <script src="./assets/script/search.js"></script>
 </body>
