--- a/search.html
+++ b/search.html
@@ -28,8 +28,8 @@
     <!-- Navbar Menu -->
     <div class="navbar-menu" id="navLinks">
       <div class="navbar-end">
-        <!-- <a class="navbar-item">About</a>
-        <a class="navbar-item">Testimonials</a> -->
+        <a  class="navbar-item">About</a>
+        <a href="#userRating" class="navbar-item">Testimonials</a>
       </div>
     </div>
   </nav>
@@ -75,4 +75,7 @@
   <!-- Script -->
   <script src="./assets/script/search.js"></script>
 </body>
+<footer>
+  
+</footer>
 </html>
