--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- Navbar Menu -->
     <div class="navbar-menu" id="navLinks">
       <div class="navbar-end">
-        <a  class="navbar-item">About</a>
-          <a href="#userRating" class="navbar-item">Testimonials</a>
+        <a href="#aboutUs" class="navbar-item">About</a>
+        <a href="#userRating" class="navbar-item">Testimonials</a>
       </div>
     </div>
   </nav>
@@ -56,7 +56,9 @@
     </form>
   </section>
 
+
   <!-- Testimonials -->
+    <h3 class="title has-text-centered is-size-3" id="ratings">Ratings</h3>
   <section class="testimonials has-text-weight-bold" id="userRating">
     <div class="rating">
       <img src="#" alt="user image" width="150" height="150">
@@ -92,6 +94,26 @@
     </div>
   </section>
 
+  <section class="section">
+    <div class="container">
+      <h3 class="title has-text-centered is-size-3" id="aboutUs">About</h3>
+      <div class="columns">
+        <div class="column subtitle">
+          <h4 class="subtitle is-size-4">About Urban-Cipher</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis dolor,
+            veritatis nemo eaque quam perspiciatis vitae voluptas laudantium eligendi voluptatibus
+            quas corporis hic qui.</p>
+        </div>
+        <div class="column subtitle">
+          <h4 class="subtitle is-size-4">About Us</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis dolor,
+            veritatis nemo eaque quam perspiciatis vitae voluptas laudantium eligendi voluptatibus
+            quas corporis hic qui.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!--Waves Container-->
   <div>
     <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -108,6 +130,13 @@
     </svg>
   </div>
   <!--Waves end-->
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <P>Copyright 2021 Urban-Cipher</P>
+    </div>
+  </footer>
 
   <script src="./assets/script/homepage.js"></script>
 </body>
