--- a/search.html
+++ b/search.html
@@ -28,8 +28,8 @@
     <!-- Navbar Menu -->
     <div class="navbar-menu" id="navLinks">
       <div class="navbar-end">
-        <a  class="navbar-item">About</a>
-        <a href="#userRating" class="navbar-item">Testimonials</a>
+        <a  href="index.html#aboutUs" class="navbar-item">About</a>
+        <a href="index.html#userRating" class="navbar-item">Testimonials</a>
       </div>
     </div>
   </nav>
@@ -56,7 +56,6 @@
             </div>
         </div>
         <!-- Websters Dictionary Search-->
-        <!-- <div class="column is-6-tablet is-4-desktop navbar-end" id="miriamWeb"> -->
           <div class="field2">
             <div class="control">
               <div class="card">
@@ -70,8 +69,16 @@
         </div>
       </div>
     </div>
-  </div>
     </section>
+
+      <!-- Footer -->
+  <footer class="footer">
+    <div class="content has-text-centered">
+    <P>Copyright 2021 Urban-Cipher</P>                                                                                                                       
+    </div>
+      </footer>
+
+
   <!-- Script -->
   <script src="./assets/script/search.js"></script>
 </body>
