--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
   <!-- Testimonials -->
-    <h3 class="title has-text-centered is-size-3" id="ratings">Ratings</h3>
+    <h3 class="title has-text-centered is-size-3" id="ratings">Testimonials</h3>
   <section class="testimonials has-text-weight-bold" id="userRating">
     <div class="rating">
       <img src="#" alt="user image" width="150" height="150">
