fixed songDropDown function

--- a/search.html
+++ b/search.html
@@ -51,10 +51,10 @@
               <input type="text" class="input" id="urban-input" placeholder="Urban Dictionary Search">
               <button class="button glow-button" id="urban-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition: <span id="urbanWordSpan"></span></h3>
-              <div id="render-urban"></div>
+              <div id="render-urban" class="content"></div>
               </div>
             </div>
-        </div>
+          </div>
         <!-- Websters Dictionary Search-->
           <div class="field2">
             <div class="control">
@@ -62,7 +62,7 @@
               <input type="text" class="input" id="webster-input" placeholder="Merriam Webster Dictionary Search">
               <button class="button glow-button" id="webster-button" type="submit">SEARCH</button>
               <h3 class="is-size-4 has-text-weight-bold">Definition: <span id="websterWordSpan"></span></h3>
-              <p id="render-webster"></p>
+              <div id="render-webster" class="content"></div>
             </div>
             </div>
           </div>
