reloaded git repo

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="has-text-centered">
       <P>Copyright 2021 Urban-Cipher</P>
     </div>
   </footer>
