--- a/search.html
+++ b/search.html
@@ -37,7 +37,7 @@
   <section class="section">
     <div class="container">
       <div class="columns is-multiline">
-        <div class="column is-12-tablet is-8-desktop">
+        <div class="column is-12-tablet is-8-desktop" id="lyrics-div">
           <h1 class="title is-size-1" id="lyricsInput">Lyrics</h1>
           <p>
             <pre id="render-lyrics"></pre>
@@ -73,10 +73,10 @@
 
       <!-- Footer -->
   <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="has-text-centered">
     <P>Copyright 2021 Urban-Cipher</P>                                                                                                                       
     </div>
-      </footer>
+  </footer>
 
 
   <!-- Script -->
