Changed about section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
 </head>
 
 <body>
@@ -97,20 +98,13 @@
 
   <section class="section">
     <div class="container">
-      <h3 class="title has-text-centered is-size-3" id="aboutUs">About</h3>
+      <h3 class="title has-text-centered is-size-3" id="aboutUs">About Urban Cipher</h3>
       <div class="columns">
         <div class="column subtitle">
-          <h4 class="subtitle is-size-4">About Urban-Cipher</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis dolor,
-            veritatis nemo eaque quam perspiciatis vitae voluptas laudantium eligendi voluptatibus
-            quas corporis hic qui.</p>
+                  <p>Is your favorite song just a string of words you've memorized, but whose meaning eludes you? Have you said 'Yeet' with a straight face, but with shame in your heart? Do you mumble through the verses until the chorus arrives? We've got you covered. With our app you can deepen your lyrical knowledge by using our dictionary functions to look up any word.</p><br>
+           <p> Start by entering the artist you are looking for. Our app will generate that artists top 10 tracks to help you find your song, otherwise enter the song of your choice. Press search and we generate the lyrics of that song for you. Now you can use our Urban Dictionary search for any lingo you want to get 'hip' with. Or further your 'traditional ' knowledge with our Webster dictionary search. You are now on your way to deepening your lyrical knowledge and discovering the meaning of 'Yeet'.</p>
         </div>
-        <div class="column subtitle">
-          <h4 class="subtitle is-size-4">About Us</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis dolor,
-            veritatis nemo eaque quam perspiciatis vitae voluptas laudantium eligendi voluptatibus
-            quas corporis hic qui.</p>
-        </div>
+  
       </div>
     </div>
   </section>
@@ -134,7 +128,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="has-text-centered">
+    <div class="content has-text-centered">
       <P>Copyright 2021 Urban-Cipher</P>
     </div>
   </footer>
